# chess

./: CMakeCache.txt  CMakeLists.txt  Chess.sln  Chess.vcxproj  Chess.vcxproj.filters  Makefile  cmake_install.cmake
src/: Functions.h  GameLogic.h  Logic.cpp  Logic.h  main.cpp
src/Figures/: Figure.cpp  Figure.h
src/Windows/: MainMenu.cpp  MainMenu.h  PlayMenu.cpp  PlayMenu.h  Setting.cpp  Setting.h  TypeGame.cpp  TypeGame.h
x64/Debug/: main.obj.enc  playmenu.obj.enc  typegame.obj.enc  vc143.idb
x64/Debug/Chess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Chess.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
